# ComputerGraphicsFinalProject

./: .gitignore  CMakeLists.txt  GameDesignDocument.tex  LICENSE  README.md
assets/: lang_de.json  lang_en.json  lang_zh.json
assets/maps/: custom_editor.txt  level3.txt
assets/maps/community/: c1.txt  c2.txt  custom_editor.txt
assets/maps/desert/: 2-1.txt  2-2.txt  2-3.txt
assets/maps/grassland/: 1-1.txt  1-2.txt  1-3.txt
assets/maps/hell/: 3-1.txt  3-2.txt  3-3.txt
include/: CampaignScreen.h  Constants.h  CustomScreen.h  Enemy.h  Game.h  LangManager.h  LevelData.h  Map.h  PathFinder.h  PlayerData.h  Projectile.h  Tower.h  UI.h  WaveManager.h
main/: main.cpp
src/: CampaignScreen.cpp  CustomScreen.cpp  Enemy.cpp  Game.cpp  GamePlay.cpp  GamePlayCheatCode.cpp  GamePlayLogic.cpp  GamePlayPause.cpp  GamePlayRender.cpp  GameScreens.cpp  GameScreensConfirm.cpp  GameScreensCreateCharacter.cpp  GameScreensLoadCharacter.cpp  GameScreensMapEditor.cpp  GameScreensMenu.cpp  GameScreensSelectCharacter.cpp  GameScreensSetting.cpp  GameScreensShop.cpp  LangManager.cpp  Map.cpp  PathFinder.c  PlayerData.cpp  Projectile.cpp  Tower.cpp  UI.cpp  WaveManager.cpp  main.cpp
tools/script/: sync.bat  sync.sh  sync_clean.py
